Make sure the up to date is perfectly aligned

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -920,10 +920,3 @@ div.equipments-selected
 .indented2 {
   margin-left: 4rem;
 }
-
-.up-to-date {
-  display: flex;
-  line-height: 1.2;
-  margin-bottom: 0.5rem;
-  align-items: center;
-}
